@@ -1,3 +1,8 @@
+2014-09-07  Chris Moller  <moller@mollerware.com>
+
+	* aplio.c (send_apl): Added convenience wrapper to send().  (Also
+	affected fcns in edit.c and menu.c.
+
 2014-08-31  Chris Moller  <moller@mollerware.com>
 
 	* menu.c (open_object_cb): Put open list inside a scrolled
